--- a/utils/notebooks/reconcile_facilities.ipynb
+++ b/utils/notebooks/reconcile_facilities.ipynb
@@ -2,18 +2,53 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "english-sociology",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: install in /home/hsb/.local/lib/python3.8/site-packages (1.3.4)\n",
+      "Requirement already satisfied: fuzzywuzzy in /home/hsb/.local/lib/python3.8/site-packages (0.18.0)\n",
+      "Requirement already satisfied: PyShp in /home/hsb/.local/lib/python3.8/site-packages (2.1.3)\n",
+      "Requirement already satisfied: geopandas in /home/hsb/.local/lib/python3.8/site-packages (0.9.0)\n",
+      "Requirement already satisfied: rtree in /home/hsb/.local/lib/python3.8/site-packages (0.9.7)\n",
+      "Requirement already satisfied: matplotlib in /home/hsb/.local/lib/python3.8/site-packages (3.3.4)\n",
+      "Requirement already satisfied: cartopy in /home/hsb/.local/lib/python3.8/site-packages (0.18.0)\n",
+      "Requirement already satisfied: cython in /home/hsb/.local/lib/python3.8/site-packages (0.29.22)\n",
+      "Requirement already satisfied: python-Levenshtein in /home/hsb/.local/lib/python3.8/site-packages (0.12.2)\n",
+      "Requirement already satisfied: shapely>=1.6 in /home/hsb/.local/lib/python3.8/site-packages (from geopandas) (1.7.1)\n",
+      "Requirement already satisfied: pandas>=0.24.0 in /home/hsb/.local/lib/python3.8/site-packages (from geopandas) (1.2.3)\n",
+      "Requirement already satisfied: fiona>=1.8 in /home/hsb/.local/lib/python3.8/site-packages (from geopandas) (1.8.18)\n",
+      "Requirement already satisfied: pyproj>=2.2.0 in /home/hsb/.local/lib/python3.8/site-packages (from geopandas) (3.0.0.post1)\n",
+      "Requirement already satisfied: pillow>=6.2.0 in /usr/lib/python3/dist-packages (from matplotlib) (7.0.0)\n",
+      "Requirement already satisfied: cycler>=0.10 in /home/hsb/.local/lib/python3.8/site-packages (from matplotlib) (0.10.0)\n",
+      "Requirement already satisfied: numpy>=1.15 in /home/hsb/.local/lib/python3.8/site-packages (from matplotlib) (1.20.1)\n",
+      "Requirement already satisfied: python-dateutil>=2.1 in /usr/lib/python3/dist-packages (from matplotlib) (2.7.3)\n",
+      "Requirement already satisfied: pyparsing!=2.0.4,!=2.1.2,!=2.1.6,>=2.0.3 in /home/hsb/.local/lib/python3.8/site-packages (from matplotlib) (2.4.7)\n",
+      "Requirement already satisfied: kiwisolver>=1.0.1 in /home/hsb/.local/lib/python3.8/site-packages (from matplotlib) (1.3.1)\n",
+      "Requirement already satisfied: six>=1.3.0 in /usr/lib/python3/dist-packages (from cartopy) (1.14.0)\n",
+      "Requirement already satisfied: setuptools>=0.7.2 in /usr/lib/python3/dist-packages (from cartopy) (45.2.0)\n",
+      "Requirement already satisfied: pytz>=2017.3 in /usr/lib/python3/dist-packages (from pandas>=0.24.0->geopandas) (2019.3)\n",
+      "Requirement already satisfied: click<8,>=4.0 in /usr/lib/python3/dist-packages (from fiona>=1.8->geopandas) (7.0)\n",
+      "Requirement already satisfied: click-plugins>=1.0 in /home/hsb/.local/lib/python3.8/site-packages (from fiona>=1.8->geopandas) (1.1.1)\n",
+      "Requirement already satisfied: cligj>=0.5 in /home/hsb/.local/lib/python3.8/site-packages (from fiona>=1.8->geopandas) (0.7.1)\n",
+      "Requirement already satisfied: attrs>=17 in /home/hsb/.local/lib/python3.8/site-packages (from fiona>=1.8->geopandas) (20.3.0)\n",
+      "Requirement already satisfied: certifi in /usr/lib/python3/dist-packages (from fiona>=1.8->geopandas) (2019.11.28)\n",
+      "Requirement already satisfied: munch in /home/hsb/.local/lib/python3.8/site-packages (from fiona>=1.8->geopandas) (2.5.0)\n"
+     ]
+    }
+   ],
    "source": [
-    "! pip3 install --user install fuzzywuzzy PyShp geopandas rtree matplotlib cartopy cython cartopy"
+    "! pip3 install --user install fuzzywuzzy PyShp geopandas rtree matplotlib cartopy cython cartopy python-Levenshtein"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "running-awareness",
+   "execution_count": 16,
+   "id": "fundamental-brain",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,18 +61,19 @@
     "import json\n",
     "import matplotlib.pyplot as plt\n",
     "import geopandas as gpd\n",
-    "from cartopy import crs as ccrs"
+    "from cartopy import crs as ccrs\n",
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "id": "suspended-casino",
    "metadata": {},
    "outputs": [],
    "source": [
     "# read intermediate canonical facilities into dataframe\n",
-    "intermediate_url=\"https://raw.githubusercontent.com/PTDP/data/main/intermediate_data/intermediate_company_facilities.csv\"\n",
+    "intermediate_url=\"https://raw.githubusercontent.com/PTDP/data/main/intermediate_data/geocoded_company_facilities.csv\"\n",
     "intermediate = pd.read_csv(intermediate_url)\n",
     "\n",
     "hifld_url=\"https://opendata.arcgis.com/datasets/2d6109d4127d458eaf0958e4c5296b67_0.csv?outSR=%7B%22latestWkid%22%3A3857%2C%22wkid%22%3A102100%7D\"\n",
@@ -46,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "id": "saved-chicken",
    "metadata": {},
    "outputs": [],
@@ -56,15 +92,19 @@
     "# uppercase\n",
     "# remove entities before dash IL DOC - BIG MUDDY RIVER CORRECTIONAL CENTER\n",
     "\n",
-    "intermediate['googlePlaceName'] = intermediate['googlePlaceName'].str.upper();\n",
+    "def clean_facility_internal(str):\n",
+    "    split = str.split(\"-\")\n",
+    "    if (len(split) > 1):\n",
+    "        return split[1]\n",
+    "    return str\n",
     "\n",
-    "#print(intermediate)\n",
-    "#print(hifld)"
+    "intermediate['googlePlaceName'] = intermediate['googlePlaceName'].str.upper();\n",
+    "intermediate['facilityInternal'] = intermediate['facilityInternal'].apply(lambda x: clean_facility_internal(x))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "id": "geological-settle",
    "metadata": {},
    "outputs": [
@@ -93,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "id": "residential-penetration",
    "metadata": {},
    "outputs": [
@@ -117,74 +157,15 @@
     "with open(local_path,'wb') as out: ## Open temporary file as bytes\n",
     "    out.write(io.BytesIO(r.content).read())                ## Read bytes into file\n",
     "\n",
-    "# z = zipfile.ZipFile(io.BytesIO(r.content))\n",
-    "# z.write(local_path)\n",
-    "# z.close()\n",
-    "print(\"Done\")\n",
-    "#z.extractall(path=local_path) # extract to folder\n",
-    "#filenames = [y for y in sorted(z.namelist()) for ending in ['dbf', 'prj', 'shp', 'shx'] if y.endswith(ending)] \n",
-    "#print(filenames)"
+    "print(\"Done\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 23,
    "id": "systematic-showcase",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "id                  10880\n",
-       "facilityInternal    10880\n",
-       "agencyInternal       6612\n",
-       "stateInternal       10880\n",
-       "company             10880\n",
-       "createdAt           10880\n",
-       "googlePlaceName     10880\n",
-       "address             10880\n",
-       "longitude           10880\n",
-       "latitude            10880\n",
-       "county              10790\n",
-       "googlePlaceId       10880\n",
-       "state               10880\n",
-       "geometry            10880\n",
-       "index_right         10880\n",
-       "FID                 10880\n",
-       "FACILITYID          10880\n",
-       "NAME                10880\n",
-       "ADDRESS             10880\n",
-       "CITY                10880\n",
-       "STATE               10880\n",
-       "ZIP                 10880\n",
-       "ZIP4                10880\n",
-       "TELEPHONE           10880\n",
-       "TYPE                10880\n",
-       "STATUS              10880\n",
-       "POPULATION          10880\n",
-       "COUNTY              10880\n",
-       "COUNTYFIPS          10880\n",
-       "COUNTRY             10880\n",
-       "NAICS_CODE          10880\n",
-       "NAICS_DESC          10880\n",
-       "SOURCE              10880\n",
-       "SOURCEDATE          10880\n",
-       "VAL_METHOD          10880\n",
-       "VAL_DATE            10880\n",
-       "WEBSITE             10880\n",
-       "SECURELVL           10880\n",
-       "CAPACITY            10880\n",
-       "SHAPE_Leng          10880\n",
-       "SHAPE_Le_1          10880\n",
-       "SHAPE_Area          10880\n",
-       "dtype: int64"
-      ]
-     },
-     "execution_count": 43,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#print(r.content)\n",
     "# hifld_geojson = shapefile.Reader(local_path + 'Prison_Boundaries.dbf').__geo_interface__\n",
@@ -196,27 +177,46 @@
     "gdf_intermediate = gdf_intermediate.to_crs(\"EPSG:3857\")\n",
     "\n",
     "# buffer in miles around each geocoded point\n",
-    "buffer_length_in_meters = (5 * 1000) * 1.60934\n",
+    "buffer_length_in_meters = (.5 * 1000) * 1.60934\n",
     "gdf_intermediate['geometry'] = gdf_intermediate.geometry.buffer(buffer_length_in_meters)\n",
     "\n",
-    "# ax = gdf_intermediate.plot()\n",
-    "\n",
-    "# distance + name similarity score\n",
-    "\n",
-    "# fuzz.token_set_ratio(Str1,Str2)\n",
+    "def fuzz_token (arr):\n",
+    "    print(arr)\n",
+    "    return fuzz.token_set_ratio(arr[0], arr[1])\n",
     "\n",
     "\n",
     "gdf_hifld = gpd.read_file(local_path)\n",
     "\n",
     "sjoined_facilities = gpd.sjoin(gdf_intermediate, gdf_hifld)\n",
-    "sjoined_facilities.head()\n",
-    "sjoined_facilities.count()\n"
+    "\n",
+    "sjoined_facilities[\"g_name_sim\"] = sjoined_facilities.apply(lambda x: fuzz.token_set_ratio(x.googlePlaceName, x.NAME), axis=1)\n",
+    "sjoined_facilities[\"internal_name_sim\"] = sjoined_facilities.apply(lambda x: fuzz.token_set_ratio(x.facilityInternal, x.NAME), axis=1)\n",
+    "\n",
+    "\n",
+    "def make_column(df):\n",
+    "    return pd.Series(np.random.randn(len(df['g_name_sim'])), index=df.index)\n",
+    "\n",
+    "sjoined_facilities['name_override'] =  \"\"\n",
+    "sjoined_facilities['jurisdiction_override'] = \"\"\n",
+    "sjoined_facilities['address_override'] = \"\"\n",
+    "sjoined_facilities['longitude_override'] = \"\"\n",
+    "sjoined_facilities['latitude_overrride'] = \"\"\n",
+    "sjoined_facilities['state_override'] = \"\"\n",
+    "sjoined_facilities['county_override'] = \"\"\n",
+    "sjoined_facilities['countyFIPS_override'] = \"\"\n",
+    "sjoined_facilities['HIFLDID_override'] = \"\"\n",
+    "sjoined_facilities['UCLACovid19ID_override'] = \"\"\n",
+    "sjoined_facilities['hidden_override'] = \"\"\n",
+    "\n",
+    "# keep only entry with highest google name similarity\n",
+    "sjoined_facilities.sort_values('g_name_sim').drop_duplicates('id', keep='last')\n",
+    "sjoined_facilities.drop('geometry', axis=1).to_csv(r'joined.csv')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "impressive-temperature",
+   "id": "musical-hudson",
    "metadata": {},
    "outputs": [],
    "source": []
