Add new facilities

--- a/utils/notebooks/reconcile_facilities.ipynb
+++ b/utils/notebooks/reconcile_facilities.ipynb
@@ -2,21 +2,75 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "english-sociology",
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: install in /Users/hsb/Library/Python/3.9/lib/python/site-packages (1.3.4)\n",
+      "Requirement already satisfied: wheel in /usr/local/lib/python3.9/site-packages (0.36.1)\n",
+      "Requirement already satisfied: pandas in /Users/hsb/Library/Python/3.9/lib/python/site-packages (1.2.3)\n",
+      "Requirement already satisfied: fuzzywuzzy in /Users/hsb/Library/Python/3.9/lib/python/site-packages (0.18.0)\n",
+      "Requirement already satisfied: PyShp in /Users/hsb/Library/Python/3.9/lib/python/site-packages (2.1.3)\n",
+      "Requirement already satisfied: geopandas in /Users/hsb/Library/Python/3.9/lib/python/site-packages (0.9.0)\n",
+      "Requirement already satisfied: rtree in /Users/hsb/Library/Python/3.9/lib/python/site-packages (0.9.7)\n",
+      "Requirement already satisfied: matplotlib in /Users/hsb/Library/Python/3.9/lib/python/site-packages (3.4.1)\n",
+      "Requirement already satisfied: cartopy in /Users/hsb/Library/Python/3.9/lib/python/site-packages (0.18.0)\n",
+      "Requirement already satisfied: cython in /Users/hsb/Library/Python/3.9/lib/python/site-packages (0.29.22)\n",
+      "Requirement already satisfied: cartopy in /Users/hsb/Library/Python/3.9/lib/python/site-packages (0.18.0)\n",
+      "Requirement already satisfied: python-Levenshtein in /Users/hsb/Library/Python/3.9/lib/python/site-packages (0.12.2)\n",
+      "Requirement already satisfied: six>=1.3.0 in /Users/hsb/Library/Python/3.9/lib/python/site-packages (from cartopy) (1.15.0)\n",
+      "Requirement already satisfied: shapely>=1.5.6 in /Users/hsb/Library/Python/3.9/lib/python/site-packages (from cartopy) (1.7.1)\n",
+      "Requirement already satisfied: PyShp in /Users/hsb/Library/Python/3.9/lib/python/site-packages (2.1.3)\n",
+      "Requirement already satisfied: setuptools>=0.7.2 in /usr/local/lib/python3.9/site-packages (from cartopy) (51.0.0)\n",
+      "Requirement already satisfied: numpy>=1.10 in /usr/local/lib/python3.9/site-packages (from cartopy) (1.20.2)\n",
+      "Requirement already satisfied: fiona>=1.8 in /Users/hsb/Library/Python/3.9/lib/python/site-packages (from geopandas) (1.8.18)\n",
+      "Requirement already satisfied: shapely>=1.5.6 in /Users/hsb/Library/Python/3.9/lib/python/site-packages (from cartopy) (1.7.1)\n",
+      "Requirement already satisfied: pyproj>=2.2.0 in /Users/hsb/Library/Python/3.9/lib/python/site-packages (from geopandas) (3.0.1)\n",
+      "Requirement already satisfied: pandas in /Users/hsb/Library/Python/3.9/lib/python/site-packages (1.2.3)\n",
+      "Requirement already satisfied: python-dateutil>=2.7 in /Users/hsb/Library/Python/3.9/lib/python/site-packages (from matplotlib) (2.8.1)\n",
+      "Requirement already satisfied: pillow>=6.2.0 in /Users/hsb/Library/Python/3.9/lib/python/site-packages (from matplotlib) (8.2.0)\n",
+      "Requirement already satisfied: numpy>=1.10 in /usr/local/lib/python3.9/site-packages (from cartopy) (1.20.2)\n",
+      "Requirement already satisfied: pyparsing>=2.2.1 in /Users/hsb/Library/Python/3.9/lib/python/site-packages (from matplotlib) (2.4.7)\n",
+      "Requirement already satisfied: cycler>=0.10 in /Users/hsb/Library/Python/3.9/lib/python/site-packages (from matplotlib) (0.10.0)\n",
+      "Requirement already satisfied: kiwisolver>=1.0.1 in /Users/hsb/Library/Python/3.9/lib/python/site-packages (from matplotlib) (1.3.1)\n",
+      "Requirement already satisfied: python-dateutil>=2.7 in /Users/hsb/Library/Python/3.9/lib/python/site-packages (from matplotlib) (2.8.1)\n",
+      "Requirement already satisfied: pytz>=2017.3 in /Users/hsb/Library/Python/3.9/lib/python/site-packages (from pandas) (2021.1)\n",
+      "Requirement already satisfied: numpy>=1.10 in /usr/local/lib/python3.9/site-packages (from cartopy) (1.20.2)\n",
+      "Requirement already satisfied: setuptools>=0.7.2 in /usr/local/lib/python3.9/site-packages (from cartopy) (51.0.0)\n",
+      "Requirement already satisfied: six>=1.3.0 in /Users/hsb/Library/Python/3.9/lib/python/site-packages (from cartopy) (1.15.0)\n",
+      "Requirement already satisfied: cligj>=0.5 in /Users/hsb/Library/Python/3.9/lib/python/site-packages (from fiona>=1.8->geopandas) (0.7.1)\n",
+      "Requirement already satisfied: attrs>=17 in /Users/hsb/Library/Python/3.9/lib/python/site-packages (from fiona>=1.8->geopandas) (20.3.0)\n",
+      "Requirement already satisfied: six>=1.3.0 in /Users/hsb/Library/Python/3.9/lib/python/site-packages (from cartopy) (1.15.0)\n",
+      "Requirement already satisfied: click<8,>=4.0 in /Users/hsb/Library/Python/3.9/lib/python/site-packages (from fiona>=1.8->geopandas) (7.1.2)\n",
+      "Requirement already satisfied: certifi in /Users/hsb/Library/Python/3.9/lib/python/site-packages (from fiona>=1.8->geopandas) (2020.12.5)\n",
+      "Requirement already satisfied: munch in /Users/hsb/Library/Python/3.9/lib/python/site-packages (from fiona>=1.8->geopandas) (2.5.0)\n",
+      "Requirement already satisfied: click-plugins>=1.0 in /Users/hsb/Library/Python/3.9/lib/python/site-packages (from fiona>=1.8->geopandas) (1.1.1)\n",
+      "Requirement already satisfied: click<8,>=4.0 in /Users/hsb/Library/Python/3.9/lib/python/site-packages (from fiona>=1.8->geopandas) (7.1.2)\n",
+      "Requirement already satisfied: click<8,>=4.0 in /Users/hsb/Library/Python/3.9/lib/python/site-packages (from fiona>=1.8->geopandas) (7.1.2)\n",
+      "Requirement already satisfied: six>=1.3.0 in /Users/hsb/Library/Python/3.9/lib/python/site-packages (from cartopy) (1.15.0)\n",
+      "Requirement already satisfied: certifi in /Users/hsb/Library/Python/3.9/lib/python/site-packages (from fiona>=1.8->geopandas) (2020.12.5)\n",
+      "Requirement already satisfied: six>=1.3.0 in /Users/hsb/Library/Python/3.9/lib/python/site-packages (from cartopy) (1.15.0)\n"
+     ]
+    }
+   ],
    "source": [
-    "! pip3 install --user install fuzzywuzzy PyShp geopandas rtree matplotlib cartopy cython cartopy python-Levenshtein"
+    "! pip3 install --user install wheel pandas fuzzywuzzy PyShp geopandas rtree matplotlib cartopy cython cartopy python-Levenshtein"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "fundamental-brain",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import sys\n",
+    "\n",
+    "sys.path.append('/Users/hsb/Library/Python/3.9/lib/python/site-packages')\n",
+    "sys.path.append('/usr/local/lib/python3.9/site-packages')\n",
+    "\n",
     "import pandas as pd\n",
     "import io\n",
     "import requests\n",
@@ -32,8 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "suspended-casino",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,8 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "saved-chicken",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,8 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "residential-penetration",
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -98,8 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "spare-advice",
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -107,7 +157,7 @@
      "output_type": "stream",
      "text": [
       "hello\n",
-      "2218\n"
+      "3021\n"
      ]
     }
    ],
@@ -145,8 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "satisfactory-freight",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,7 +269,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "musical-hudson",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -228,7 +276,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "indonesian-forest",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -236,7 +283,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "latest-spell",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -244,7 +290,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "typical-american",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -266,7 +311,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.1"
   }
  },
  "nbformat": 4,
